jquery.com: Fix overlapping corporate member logos on home page
Partial solution for #53

--- a/themes/jquery.com/style.css
+++ b/themes/jquery.com/style.css
@@ -142,7 +142,6 @@ a,
 }
 
 #corporate-members a {
-	float: left;
 	height: 100%;
 }
 
